# connect2

./: .gitignore  ai_battle_visualizer.py  connectFour.py  dump_weight.py  dump_weight_cnn.py  human_vs_ai_qt.py  main.py  main_cnn.py  main_trans.py  ppo_test.py  pyproject.toml  remove_dog.py  remove_garbege_model.py  simple.py  submission.py  submission_vMega.py  temp.py  test.py
