[project]
name = "connect2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle-environments==0.1.4",
    "nuitka>=2.7.13",
    "opencv-python-headless>=4.12.0.88",
    "pybloom-live>=4.0.0",
    "pyqt5>=5.15.11",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "stable-baselines3[extra]>=2.7.0",
    "textwrap3>=0.9.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[tool.uv.workspace]
members = [
    "temp",
]
